  * (feature) New option '-N' to output statistics for netdata (see: http://my-netdata.io/, #10, Costa Tsaousis)
  * (feature) New option '-o' to calculate total outage time (#90, @jgerbeck)
  * (bugfix) Exit code should be 2 when the hostname can't be resolved
            (fixes #98, reported by @green-fox)
  * (bugfix)  Fix issue compliling on RHEL/Centos 7 (#95, @jbackman)

2015-10-21  David Schweikert  <david@schweikert.ch>
  * Version 3.13
  * (bugfix) Fix ICMP errors sometimes causing crashes with fping >= 3.11
             (fixes #85, reported by Jamie Heilman and Bill Blough)

2015-10-14  David Schweikert  <david@schweikert.ch>
  * Version 3.12
  * (bugfix) Fix fping6 -R (fixes #84, reported by Stuart Henderson)

2015-10-12  David Schweikert  <david@schweikert.ch>
  * Version 3.11
  * (feature)  New option -R to use random bytes instead of NULLs (#72, Anthony DeRobertis)
  * (feature)  Small documentation and performance improvements (Ryan Underwood)
  * (bugfix)   Fix double entries with fping -u and unreachable hosts
  * (internal) Use sockaddr_storage and simplify code, so that we can one day support both IPv4 and IPv6 with the same binary

2014-05-03  David Schweikert  <david@schweikert.ch>
  * Version 3.10
  * Fix confusing error message with -g and IPv6 addresses (#58, reported by Axel Beckert)
  * Allow option '-f' also for non-root (since setuid privileges are dropped)
  * Do not retry twice DNS lookup on DNS lookup problem
  * Remove support for NIS groups
  * Better document -B backoff-factor and when it can be used (#33, Oleksiy Zagorskyi)
  * More tests added

2014-03-08  David Schweikert  <david@schweikert.ch>
  * Version 3.9
  * Fix random output on socket error (reported by Aleksandrs Saveljevs, #56)
  * Support ppc64le architecture by including alpha libtool version
    (reported by Amit Kumar Gupta and Aravinda B Thunug)
  * Fix compilation problem on FreeBSD (#57)