@@ -214,7 +214,7 @@ on the fly at one second intervals, and printing statistics at the end:
 
 # fping -s -l -i 1 -p 1 -T 1 -Q 1 127.0.0.1
 
-Note that ping intervals less than 10ms can only be used as root.
+Note that ping intervals less than 1ms can only be used as root.
 
 =head1 AUTHORS
 
@@ -257,7 +257,7 @@ to stop mere mortals from hosing the network, normal users can't specify the fol
 
 =item *
 
-B<-i> I<n>, where I<n> < 10 msec
+B<-i> I<n>, where I<n> < 1 msec
 
 =item *
 
