@@ -6,6 +6,8 @@ UNRELEASED
   * (bugfix) Exit code should be 2 when the hostname can't be resolved
             (fixes #98, reported by @green-fox)
   * (bugfix)  Fix issue compliling on RHEL/Centos 7 (#95, @jbackman)
+  * (bugfix) Lower -i limit to 1 instead of 10
+  * (bugfix) Improve interval preciseness of -Q reporting
 
 2015-10-21  David Schweikert  <david@schweikert.ch>
   * Version 3.13
